# activitypub-mincore

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
activitypub_mincore/: actor.py  follower.py  publisher.py
activitypub_mincore/schemas/: activity-schema.json  actor-schema.json  object-schema.json
activitypub_mincore/support/: cli.py  server.py  validation.py
tests/: conftest.py  support.py  test_follower.py  test_publisher.py  test_validation.py
