[tool.poetry]
name = "activitypub-mincore"
version = "0.1.0"
description = ""
authors = ["Steve Bate <svc-github@stevebate.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
httpx = "^0.25.0"
uvicorn = "^0.23.2"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.290"
mypy = "^1.5.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mincore = "activitypub_mincore.support.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
